Fix Css Dark mode on author.php

--- a/sass/dark-mode/dark-mode.scss
+++ b/sass/dark-mode/dark-mode.scss
@@ -95,11 +95,11 @@ body.darkmode--activated{
         background: $dark-opacity;
         
         &.location{
+            .custom-logo{
+                filter: grayscale(100%) invert(100%);
+            }
             .wrapper{
                 .information-location{
-                    img{
-                        filter: invert(100%) grayscale(100%);
-                    }
                     p, address, a{
                         color: $light-full;
                     }
@@ -174,6 +174,7 @@ body.darkmode--activated{
                 li{
                     a{
                         color: $light-full;
+                        border-color: $light-full;
                     }
                 }
             }
@@ -197,6 +198,14 @@ body.darkmode--activated{
     
     .wp-block-quote{
         color: $light-full;
+    }
+    
+    .author-card {
+        > div:first-child{ 
+            > div:last-child{
+                mix-blend-mode: normal!important;   
+            }
+        }
     }
     /* FOOTER */
     footer[id="colophon"]{
